--- a/code_review_backend/requirements.txt
+++ b/code_review_backend/requirements.txt
@@ -11,6 +11,7 @@ langchain
 langchain-core
 langchain-google-genai
 langchain-openai
+langgraph
 python-dotenv
 
 # Optional: for development and testing
